Title bug is finally squashed!

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -91,10 +91,11 @@ p {
   text-rendering: optimizeLegibility;
   padding-left: 10px;
   padding-right: 10px;
-  font-family: 'Quicksand';
-  font-weight: 350;
+  font-family: 'Comfortaa';
+  font-weight: 450;
   width: 100%;
-  color: #000;
+  color: #212121;
+  font-style: bold;
 }
 
 abbr[title],
@@ -415,10 +416,24 @@ h6, .h6 {
   line-height: 166%;
   padding-left: 20px;
   padding-right: 20px;
-  background: -webkit-linear-gradient(rgb(0, 233, 255, 0.6), rgb(255, 133, 0, 0.9));
+  background: -webkit-linear-gradient(rgb(0, 233, 255, 0.6), rgb(255, 133, 0, 0.5));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  text-shadow: 0px 0px 0.9px rgb(233, 233, 233, 0.9);
+  text-shadow: 0px 0px 0.9px rgb(233, 233, 233, 1);
+}
+
+.lead-alt {
+  font-size: 1.5rem;
+  font-weight: 400;
+  font-family: 'Open Sans';
+  font-style: normal;
+  line-height: 166%;
+  padding-left: 20px;
+  padding-right: 20px;
+  background: -webkit-linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.9));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-shadow: 0px 0px 0.9px rgba(2, 17, 113, 0.0);
 }
 
 .display-1 {
